--- a/templates/user.html
+++ b/templates/user.html
@@ -193,7 +193,7 @@
             <div class="input-field col s12 ">
                 <i class="material-icons prefix">healing</i>
                 {{ form.trestbps }}
-                <label for="a4">Resting Blood Pressure (mm Hg)</label>
+                <label for="a4">Resting Blood Pressure (mm Hg)(92 to 200)</label>
                 <span class="helper-text">Enter your resting blood pressure</span>
             </div>
         </div>
@@ -229,7 +229,7 @@
             <div class="input-field col s12 ">
                 <i class="material-icons prefix">fitness_center</i>
                 {{ form.thalach }}
-                <label for="a8">Maximum Heart Rate Achieved</label>
+                <label for="a8">Maximum Heart Rate Achieved(82 to 188)</label>
                 <span class="helper-text">Enter your highest heart rate achieved during exercise</span>
             </div>
         </div>
